--- a/Matematica_Sistemas_Biologicos/practica_3/tp3.ipynb
+++ b/Matematica_Sistemas_Biologicos/practica_3/tp3.ipynb
@@ -518,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Para $b=60$ vemos que se produce (aproximadamente la bifurcación) donde los dos equilibrios estables desaparecen dando lugar a un único punto estable como veremos a continuación."
+    "Para $b=60$ vemos que se produce (aproximadamente) la bifurcación donde los dos equilibrios estables desaparecen dando lugar a un único punto estable como veremos a continuación."
    ]
   },
   {
