--- a/Matematica_Sistemas_Biologicos/practica_4/TP4_MSB_IgnacioLembo/main.tex
+++ b/Matematica_Sistemas_Biologicos/practica_4/TP4_MSB_IgnacioLembo/main.tex
@@ -206,7 +206,7 @@ Haciendo todas las cuentas correspondientes y recordando que $b = 1 - h - p$, se
 Ahora, estamos en condiciones de escribir las ecuaciones del replicador para el sistema reducido de halcoles y palomas debido al vinculo $h + p + b = 1$. Las ecuaciones de replicador son  
 \begin{align}
     \dot{h} &= \frac{h}{2}(G - h(G+C) + h^2 C), \\
-    \dot{p} &= \frac{P}{2}(-G + pG + h^2 C).
+    \dot{p} &= \frac{p}{2}(-G + pG + h^2 C).
 \end{align}
 
 Los puntos fijos del sistema se obtienen igualando a cero las ecuaciones del replicador. Pidiendo $\dot{h}$ se obtiene que $h = 0$, $h=1$ o $h = 1 - \frac{C}{G}$. Si $h = 0$ y pidiendo $\dot{p}$ se obtiene que $p = 0$ o $p = 1- h^2\frac{C}{G}$.  
