--- a/Matematica_Sistemas_Biologicos/practica_1/TP1_MSB_IgnacioLembo/main.tex
+++ b/Matematica_Sistemas_Biologicos/practica_1/TP1_MSB_IgnacioLembo/main.tex
@@ -33,7 +33,7 @@
 
 \maketitle
 
-\section{Ejercicio 1 - Mapeo de Beverton-Holt}
+\section*{Ejercicio 1 - Mapeo de Beverton-Holt}
 
 El mapeo de Beverton - Holt es de la forma 
 \begin{equation}
@@ -42,16 +42,14 @@ El mapeo de Beverton - Holt es de la forma
 \end{equation}
 donde $r$ puede interpretarse como la tasa de proliferación por generación y $K$ es la capacidad de acarreo del ambiente. A pesar de ser no lineal, el modelo se puede resolver explícitamente y su solución es de la forma 
 \begin{equation}
-    \frac{K n_0}{n_0 + (K - n_0)r^{-t}}.
+    n(t) = \frac{K n_0}{n_0 + (K - n_0)r^{-t}}.
     \label{eq:beverton_sol}
 \end{equation}
-Debido a la forma de la solución, este mapeo puede considerarse el análogo discreto de la ecuación logística.
-
-Los puntos de equilibrio de la ec. (\ref*{eq:beverton_holt}) satisfacen 
+Debido a la forma de la solución, este mapeo puede considerarse el análogo discreto de la ecuación logística. Los puntos de equilibrio de la ec. (\ref*{eq:beverton_holt}) satisfacen 
 \begin{equation}
     n_{t+1} = n_t = \frac{r n_t}{1 + \frac{r-1}{K}n_t}.    
 \end{equation}
-luego resolviendo la ecuación cuadrática se llega a que $n=0$ y $n = K$ son puntos de equilibrio.
+Luego resolviendo la ecuación cuadrática en $n_t$ se llega a que $n=0$ y $n = K$ son puntos de equilibrio.
 
 Para analizar la estabilidad de los puntos de equilibrio debemos ver para qué valores de parámetros se cumplen las siguientes condiciones 
 \begin{align}
@@ -62,9 +60,9 @@ luego,
 \begin{equation}
     \frac{d f(n_t)}{d n_t} = \frac{r}{(1 + \frac{r-1}{K}n_t)^2} 
 \end{equation}
-Evaluando en los puntos de equilibrio que encontramos se tiene que 
+Evaluando en los puntos de equilibrio se tiene que 
 \begin{equation}
-    \left| \frac{df}{dn} \right|_{n=0} = r > 1, \hspace{1cm}
+    \left| \frac{df}{dn} \right|_{n=0} = r, \hspace{1cm}
     \left| \frac{df}{dn} \right|_{n=K} = \frac{1}{r}.
 \end{equation}
 por lo que el punto de equilibrio $n=0$ es estable si $|r|<1$ e inestable si $|r|>1$. Por otro lado, el punto de equilibrio $n=K$ es estable si $|r|>1$ e inestable si $|r|<1$. En el caso particular en que $r=1$ se tiene que $n_{t+1} = n_t$ y el sistema es estable para cualquier valor de $K$ o $n_0$.
@@ -74,26 +72,26 @@ Graficando las ecuaciones (\ref*{eq:beverton_holt}) y (\ref*{eq:beverton_sol}) p
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.7\textwidth]{ej1_variosr_n0=1.png}
-    \caption{Evolución del sistema para distintos valores de $r$ y condición inicial $n_0=1$. Los puntos representan la el mapeo dado por (\ref*{eq:beverton_holt}), mientras que la linea continua representa su solución analítica (\ref*{eq:beverton_sol}).} 
+    \caption{Evolución del sistema para distintos valores de $r$ y condición inicial $n_0=1$. Los puntos representan el mapeo dado por (\ref*{eq:beverton_holt}), mientras que la línea continua representa su solución analítica (\ref*{eq:beverton_sol}).} 
     \label{fig:ej1_variosr_n0=1}
 \end{figure}
 
-En la Fig. \ref*{fig:ej1_variosn0} se muestra la evolución de la población para distintos valores de $r$ y condición inicial $n_0=5$. En \ref*{fig:ej1_variosrchico_n0=5} se observa que para $r<1$ el sistema converge a $n=0$ (extensión) y, debido a que $n_0>K$ se encuentran dos divergencias en la solución analítica ya que se anula el denominador en \ref*{eq:beverton_sol}. Por otro lado, en \ref*{fig:ej1_variosrgrande_n0=5} para $r=1$ el sistema es estable y para $r>1$ el sistema converge a $n=K$. En este último caso, no es relevante que $n_0>K$ ya que el término $(K - n_0)r^{-t}$ es siempre menor a $n_0$.
+En la Fig. \ref*{fig:ej1_variosn0} se muestra la evolución de la población para distintos valores de $r$ y condición inicial $n_0=5$. En \ref*{fig:ej1_variosrchico_n0=5} se observa que para $r<1$ el sistema converge a $n=0$ (extensión) y, debido a que $n_0>K$ se encuentran dos divergencias en la solución analítica ya que se anula el denominador en \ref*{eq:beverton_sol}. Por otro lado, en \ref*{fig:ej1_variosrgrande_n0=5} se observa que para $r=1$ el sistema es estable y para $r>1$ el sistema converge a $n=K$. En este último caso, no es relevante que $n_0>K$ ya que el término $(K - n_0)r^{-t}$ es siempre menor a $n_0$.
 
 \begin{figure}[h]
     \centering
     \begin{subfigure}[b]{0.49\textwidth}
         \includegraphics[width=\textwidth]{ej1_variosrchico_n0=5.png}
-        \caption{}
+        \caption{Valores de $r$ menores a 1.}
         \label{fig:ej1_variosrchico_n0=5}
     \end{subfigure}
     \hfill
     \begin{subfigure}[b]{0.49\textwidth}
         \includegraphics[width=\textwidth]{ej1_variosrgrande_n0=5.png}
-        \caption{}
+        \caption{Valores de $r$ mayores a 1.}
         \label{fig:ej1_variosrgrande_n0=5}
     \end{subfigure}
-    \caption{Evolución del sistema para la condición inicial $n_0=5$. Los puntos representan la el mapeo dado por (\ref*{eq:beverton_holt}), mientras que la linea continua representa su solución analítica (\ref*{eq:beverton_sol}). (a) Valores de $r$ menores a 1 y (b) valores de $r$ mayores a 1.}
+    \caption{Evolución del sistema para la condición inicial $n_0=5$. Los puntos representan el mapeo dado por (\ref*{eq:beverton_holt}), mientras que la línea continua representa su solución analítica (\ref*{eq:beverton_sol}).}
     \label{fig:ej1_variosn0}
 \end{figure}
 
@@ -109,74 +107,81 @@ Resolvemos numéricamente esta ecuación diferencial utilizando $T = 1, K = 10, 
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.7\textwidth]{ej2_logistica_solnumerica.png}
-    \caption{} 
+    \caption{Solución numérica de la ecuación logística con retraso para distintos valores de $r$. Para $r=0.3$ el sistema presenta un régimen monótono que converge a $K$. Para $r=1.2$, se observan oscilaciones amortiguadas que convergen a $K$. Para $r=2.0$ se observan oscilaciones sostenidas.} 
     \label{fig:ej2_logistica_solnumerica}
 \end{figure}
 
-Cuando $T$ es un poco mayor que el valor crítico $T_c = \pi/2r$, $T = T_c + \epsilon$ la ec. logística con retraso tiene la siguiente solución analítica aproximada
-
+Cuando $T$ es un poco mayor que el valor crítico $T_c = \pi/2r$, $T = T_c + \epsilon$ la ecuación logística con retraso tiene la siguiente solución analítica aproximada
 \begin{equation}
-    N(t) \approx 1 + c e^{\frac{\epsilon t}{1 + \pi^2/4}} e^{it \biggr[ 1 - \frac{\epsilon \pi}{2 (1 + \pi^2/4)}\biggr]}.
+    N(t) \approx 1 + c e^{\frac{\epsilon t}{1 + \pi^2/4}} e^{it \biggr[ 1 - \frac{\epsilon \pi}{2 (1 + \pi^2/4)}\biggr]},
 \end{equation}
-
-En la Fig. \ref*{fig:ej2_r=2} vemos que 
+En la Fig. \ref*{fig:ej2_analitica} se muestra la solución analítica aproximada para $r=1.3$, $K=10$, $\epsilon = 0.001 $. Se observa que la solución analítica no reproduce bien la amplitud de las oscilaciones y al avanzar en el tiempo las curvas se desfasan.
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.7\textwidth]{ej2_r=2.png}
-    \caption{} 
-    \label{fig:ej2_r=2}
+    \includegraphics[width=0.7\textwidth]{ej2_analitica.png}
+    \caption{ Solución analítica aproximada de la ecuación logística con retraso para $r=1.3$, $K=10$, $\epsilon = 0.001 $ y $T = \pi/2r + \epsilon$.} 
+    \label{fig:ej2_analitica}
 \end{figure}
 
+Ahora queremos verificar para la solución numérica que la amplitud de las oscilaciones es independiente de la condición inicial $N_0$ y que su período es independiente de $r$ y aproximadamente $4T$. En la Fig. \ref{fig:ej2_peramp} se gráfica el período en función de $r$ y la amplitud en función de $N_0$. Se observa que para valores de $r \approx 2$, el período es independiente de $r$ y aproximadamente $4T$. Esto ocurre en la zona de valores de $r$ donde vimos que había oscilaciones sostenidas. En cuanto a la amplitud, se observa que si nos movemos en un entorno de $N_0 = 2$ la amplitud de las oscilaciones es aproximadamente constante. Luego al acercarnos a $N_0 = K$ la amplitud de las oscilaciones varía bruscamente y al pasarse de $K$ las amplitudes vuelven a ser constantes.
 
-donde $T$ es un poco mayor que el valor crítico $T_c = \pi/2r$, $T = T_c + \epsilon$. Verificar que tanto la amplitud de las oscilaciones es independiente de la condición inicial, como que su período es independiente de $r$ y aproximadamente $4T$.
-
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=\textwidth]{ej2_peramp.png}
+    \caption{ Período en función de $r$ y amplitud en función de $N_0$ para la solución numérica de la ecuación logística con retraso. Se observa que para valores de $r \approx 2$, el período es independiente de $r$ y aproximadamente $4T$. En cuanto a la amplitud, se observa que si nos movemos en un entorno de $N_0 = 2$ la amplitud de las oscilaciones es aproximadamente constante.} 
+    \label{fig:ej2_peramp}
+\end{figure}
 
 \section*{Ejercicio 3 - Modelo matricial de Leslie}
 
-En el modelo matricial de Leslie se llega a una expresión final que se interpreta como el hecho de que si una hembra deja en promedio menos de 1 descendiente en su vida, la especie se extingue, si deja 1 la especie mantiene la población y si es mayor a 1 la población crece exponencialmente. Matemáticamente corresponde a mostrar que el coeficiente asociado al crecimiento $r_1$ puede ser menor, igual o mayor a 1. Estas dos condiciones se vinculan a través de la expresión vista en clase 
-$$ R = 1 - (f_0 + s_0f_1 + s_0s_1f_2 + ... + s_0s_1 ... s_{K1}). $$
-Mostrar que la $r_1$ ser mayor que 1 si y solo si $R < 0$.
-
+En el modelo matricial de Leslie se llega a una expresión final que se interpreta como el hecho de que si una hembra deja en promedio menos de 1 descendiente en su vida, la especie se extingue, si deja 1 descendiente la especie mantiene la población y si deja más de 1 descendiente, la población crece exponencialmente. Esto matemáticamente corresponde a mostrar que el coeficiente asociado al crecimiento $r_1$ puede ser menor, igual o mayor a 1. Estas dos condiciones se vinculan a través de la expresión vista en clase 
+\begin{equation}
+    R = 1 - (f_0 + s_0f_1 + s_0s_1f_2 + ... + s_0s_1 ... s_{K1}).
+\end{equation}
+Queremos ver que $r_1 > 1$ si y solo si $R < 0$.
 
 Sabemos que en el modelo de Leslie se llega a la siguiente expresión para los autovalores de la matriz de Leslie 
 \begin{equation}
     R(r) = r^{k+1} - (f_0r^{k} + s_0f_1r^{k-1} + s_0s_1f_2r^{k-2} + ... + s_0s_1 ... s_{k-1}f_{k})
     \label{eq:polinomioLeslie}
 \end{equation}
-Según el teorema de Perron-Frobenius, la matriz de Leslie al ser cuadrada y no negativa invariante, dicha matriz tiene un autovector con componentes positivas, autovalor real, multiplicidad 1 y mayor en módulo que los otros autovalores. Luego, sea el autovalor $r_1$ el autovalor dominante que buscamos. 
-Según el criterio de Descartes, el número de raices positivas del polinomio (ordenado de forma decreciente) es igual al número de cambios de signo de los coeficientes o menor por una diferencia par, luego vemos que en el polinomio de la ec. (\ref*{eq:polinomioLeslie}), como los coeficientes $f_i\geq0$ y $0<s_i<1$, el polinomio tiene un solo cambio de signo del primer al segundo término, por lo que se puede afirmar que el polinomio tiene una sola raiz positiva.
+Según el teorema de Perron-Frobenius, la matriz de Leslie, al ser cuadrada y no negativa invariante, tiene un autovector con componentes positivas, autovalor real, multiplicidad 1 y mayor en módulo que los otros autovalores. Luego, sea el autovalor $r_1$ el autovalor dominante que buscamos. 
+Según el criterio de Descartes, el número de raíces positivas del polinomio (ordenado de forma decreciente) es igual al número de cambios de signo de los coeficientes o menor por una diferencia par. Luego, como $f_i\geq0$ y $0<s_i<1$, vemos que el polinomio de la ec. (\ref*{eq:polinomioLeslie}) tiene un solo cambio de signo del primer al segundo término, por lo que se puede afirmar que el polinomio tiene una sola raíz positiva.
 
 Ahora queremos ver que $r_1>1$ si y solo si $R<0$. Para ello, veamos que 
 \begin{equation}
     R(r=0) = - f_k s_0 s_1... s_{k-1} < 0,
 \end{equation}
-luego, debido a que hay solo una raíz positiva y los polinomios son continuos en $r$, se tiene que $R(r)<0$ para $0<r<r_1$ y $R(r)>0$ para $r>r_1$. Por lo tanto, si $R(r=1)<0$ se tiene que $r_1>1$ y si $R(r=1)>0$ se tiene que $r_1<1$. Y vale la vuelta ya que si $r_1>1$ entonces $R(r=1)<0$ y si $r_1<1$ entonces $R(r=1)>0$.
+luego, debido a que hay sólo una raíz positiva y los polinomios son continuos en $r$, se tiene que $R(r)<0$ para $0<r<r_1$ y $R(r)>0$ para $r>r_1$. Por lo tanto, si $R(r=1)<0$ se tiene que $r_1>1$ y si $R(r=1)>0$ se tiene que $r_1<1$. Y vale la vuelta ya que si $r_1>1$ entonces $R(r=1)<0$ y si $r_1<1$ entonces $R(r=1)>0$.
 
-\section{Ejercicio 4 - Especie con ciclo de vida anual}
+\section*{Ejercicio 4 - Especie con ciclo de vida anual}
 
 La población de una especie con ciclo de vida anual evoluciona de acuerdo a la siguiente ecuación 
 \begin{equation}
     N_{t+1} = r N_t
     \label{eq:cicloanual}
 \end{equation}    
-siendo $r$ la cantidad de descendientes de cada individuo. Tomando como condición inicial un solo individuo en el tiempo $t=0$, se simula el sistema para tal que $r$ obedece una distribución de Poisson con media 1.7, es decir, en cada paso de tiempo se elige un valor de $r$ de una distribución de Poisson con media 1.7. En la Fig. \ref*{fig:ej4_simulacion} se muestra la evolución del sistema para 20 pasos de tiempo. Se observa que cuando $r>1$ la población crece en el tiempo siguiente, cuando $r=1$ la población se mantiene constante y cuando $r=0$ la población se extingue. Una vez que $r=0$ la población ya se extingue para siempre, esto se puede ver directamente de la ec. (\ref*{eq:cicloanual}), ya que $N_{t+1}$ depende del valor anterior, luego si el valor anterior es nulo, esto se propagará para siempre.
+siendo $r$ la cantidad de descendientes de cada individuo. Tomando como condición inicial un solo individuo en el tiempo $t=0$, se simula el sistema tal que $r$ obedece una distribución de Poisson con media 1.7, es decir, en cada paso de tiempo se elige un valor de $r$ de una distribución de Poisson con media 1.7. En la Fig. \ref*{fig:ej4_simulacion} se muestra la evolución del sistema para 20 pasos de tiempo. Se observa que cuando $r>1$ la población crece en el tiempo siguiente, cuando $r=1$ la población se mantiene constante y cuando $r=0$ la población se extingue. Una vez que $r=0$ la población ya se extingue para siempre, esto se puede ver directamente de la ec. (\ref*{eq:cicloanual}), ya que $N_{t+1}$ depende del valor anterior, luego si el valor anterior es nulo, esto se propagará para siempre.
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.7\textwidth]{ej4_simulacion.png}
-    \caption{Evolución del sistema para distintos valores de $r$ y condición inicial $n_0=1$. Los puntos representan la el mapeo dado por (\ref*{eq:beverton_holt}), mientras que la linea continua representa su solución analítica (\ref*{eq:beverton_sol}).} 
+    \includegraphics[width=0.6\textwidth]{ej4_simulacion.png}
+    \caption{Evolución del sistema para 20 pasos de tiempo. Se muestra el valor de $r$ encima de cada punto. Se observa que para $r>1$ la población crece, para $r=1$ la población se mantiene constante y para $r=0$ la población se extingue.} 
     \label{fig:ej4_simulacion}
 \end{figure}
 
-Realicemos ahora $1000000$ de realizaciones del experimento anterior
+Veamos ahora la distribución de la población máxima que alcanza el sistema con este modelo y tambien la distribución del tiempo de supervivencia de la población. Para esto realizamos $100000$ de simulación del experimento y volcamos los resultados en los histogramas que se encuentran en la Fig. \ref*{fig:ej4_hists}. Podemos ver que la población máxima alcanzada por el sistema sigue una ley de potencias. Por otro lado, podemos ver que el tiempo de supervivencia no supera los 30 pasos de tiempo y el tiempo de extinción medio es de aproximadamente  pasos de tiempo.  
 
-Veamos la probabilidad de que la población se extinga a cada tiempo entre 1 y 20 generaciones, para ello tenemos que calcular la probabilidad de que $r$ sea distinto de 0 a tiempo t, es decir 
-\begin{equation}
-    P(r \ne 0) = (1 - e^{-1.7})^t.
-\end{equation}
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=\textwidth]{ej4_hists.png}
+    \caption{Histogramas de la población máxima alcanzada por el sistema y del tiempo de supervivencia de la población.} 
+    \label{fig:ej4_hists}
+\end{figure}
 
-\section{Problema 5 - Animales costeros}
+
+\section*{Problema 5 - Animales costeros}
 
 Para una población de animales costeros tenemos el siguiente modelo para describir su vulnerabildad ante tormentas severas, que las afectan de distinto modo según su intensidad y el estado de la marea:
 \begin{itemize}
@@ -199,54 +204,67 @@ La solución del crecimiento logístico es
     N(t) = \frac{K N_0 e^{rt}}{K + N_0(e^{rt} - 1)},
     \label{eq:sol_log}
 \end{equation}
-donde, en este problema, $N_0$ representa la población luego de una catástrofe y cuando $r>0$, $t\rightarrow\infty \Rightarrow N(t) = K$. Debemos encontrar una condición que caracterice la posibilidad del sistema de recuperarse ante un desasatre. En primer lugar, veamos que el tiempo entre desastres es $1/\lambda$. Insertando este tiempo en la solución exacta del modelo logístico (\ref*{eq:sol_log}) se tiene que 
+donde, en este problema, $N_0$ representa la población luego de una catástrofe y cuando $r>0$, $t\rightarrow\infty \Rightarrow N(t) = K$. 
+
+Debemos encontrar una condición que caracterice la posibilidad del sistema de recuperarse ante un desasatre. En primer lugar, veamos que el tiempo entre desastres es $1/\lambda$. Insertando este tiempo en la solución exacta del modelo logístico (\ref*{eq:sol_log}) se tiene que 
 \begin{equation}
     N(1/\lambda) = \frac{K N_0 e^{r/\lambda}}{K + N_0(e^{r/\lambda} - 1)}.
 \end{equation}
-Supongamos que ocurre una catastrofe, entonces un instante después de dicho evento la población será $pN_0$. Luego, la población en el siguiente intervalo de tiempo sin catástrofe seguirá la siguiente ecuación
+Supongamos que ocurre una catastrofe, entonces un instante después de dicho evento la población disminuirá en un factor $p$. Luego, la población en el siguiente intervalo de tiempo sin catástrofe seguirá la siguiente ecuación
 \begin{equation}
-    N(1/\lambda) = \frac{K p N_0 e^{r/\lambda}}{K + p N_0 (e^{r/\lambda} - 1)}.
+    N(1/\lambda) = \frac{K p N_0 e^{r/\lambda}}{K + p N_0 (e^{r/\lambda} - 1)} = \frac{p N_0 e^{r/\lambda}}{1 + N_0 \frac{(e^{r/\lambda} - 1)}{K}     } .
 \end{equation}
 
-
-Cuando el sistema se encuentra cerca de la extinción ($N_0$ pequeño) podemos aproximar la solución del modelo logístico como 
+Cuando el sistema se encuentra cerca de la extinción ($N_0$ pequeño) podemos realizar la siguiente aproximación 
+\begin{equation}
+    \frac{1}{1 + N_0 \alpha} \approx 1 + N_0 \alpha + O(N_0^2),
+\end{equation}
+y nos quedamos a orden 0, por lo que lleagmos a la siguiente relación
 \begin{equation}
     N(t) \approx p N_0 e^{r/\lambda},
 \end{equation}
 donde vemos que la población se recupera si $p e^{r/\lambda} > 1$ y se extingue si $p e^{r/\lambda} < 1$. Por lo tanto la condición para supervivencia de la especie es 
 \begin{equation}
     p e^{r/\lambda} > 1.
+    \label{eq:condicion}
 \end{equation}
-Verifiquemos esto con una simulación numérica. Tomamos $r=0.1, K=100, p=0.1, \lambda=0.1$ y $N_0=1$. En la Fig. \ref*{fig:ej5} se muestra la evolución del sistema para 20 pasos de tiempo. Se observa que la población se recupera si $p e^{r/\lambda} > 1$ y se extingue si $p e^{r/\lambda} < 1$.
+
+Verifiquemos esto con una simulación numérica, para valores de parámetros $r=1$, $K=1\cdot 10^8$, $p=1/e$ y $N_0=K/2$. En la Fig. \ref*{fig:ej5} se muestra la evolución del sistema para 250 pasos de tiempo. Se observa que para $\lambda = 0.75,0.9$ la población sobrevive ya que se satisface la condición que hallamos para la supervivencia de la especie (\ref*{eq:condicion}). Por otro lado, para $\lambda = 1.1,1.25$ la población se extingue ya que no se satisface la condición de supervivencia.
 
 \begin{figure}[h]
     \centering
-    \includegraphics[width=0.7\textwidth]{ej5.png}
-    \caption{} 
+    \includegraphics[width=\textwidth]{ej5.png}
+    \caption{Evolución del sistema para 250 pasos de tiempo. Se observa que para $\lambda = 0.75,0.9$ la población sobrevive ya que se satisface la condición de supervivencia de la especie (\ref*{eq:condicion}). Para $\lambda = 1.1,1.25$ la población se extingue ya que no se satisface la condición de supervivencia.}
     \label{fig:ej5}
 \end{figure}
 
-
-
-\section{Ejercicio 6 - Efecto Allee}
-
-
+\section*{Ejercicio 6 - Efecto Allee}
 
 El efecto Allee da cuenta de un fenómeno, descripto por W.C. Allee, asociado a la existencia de un número crítico mínimo de individuos para garantizar la supervivencia de la especie. Se supone que a partir de cierto umbral, el tamaño poblacional es tan reducido que los individuos no se reproducen al no encontrarse con otros individuos de la misma población. Una manera de modelar este efecto es por medio de la siguiente ecuación. 
+
 \begin{equation}
-    \frac{dN}{dt} = rN \biggr[ 1 - \frac{N}{K} \biggr] \biggr[ \frac{N}{A} -1 \biggr]. 
+    \frac{dN}{dt} = f(N) = rN \biggr[ 1 - \frac{N}{K} \biggr] \biggr[ \frac{N}{A} -1 \biggr]. 
 \end{equation}
 
-Analizar sus equilibrios y la estabilidad de los mismos. ¿Qué la hace diferente de la logística?
+Donde $r$ es la tasa de crecimiento intrínseca, $K$ es la capacidad de carga del ambiente y $A$ es el umbral. Busquemos los puntos de equilibrio, para esto pedimos que $\frac{dN}{dt} = 0$ y vemos que los puntos fijos del sistema son $0$, $A$ y $K$. Para estudiar la estabilidad de dichos puntos calculamos la derivada $\frac{df(N)}{d N}$ 
 
+\begin{equation*}
+    \frac{df(N)}{dN} = r \left[ 1-\frac{N}{K} \right] \left[ \frac{N}{A} -1 \right] + \frac{rN}{A} \left[ 1 - \frac{N}{K} \right] - \frac{rN}{K} \left[ \frac{N}{A}-1\right],
+\end{equation*}
+y evaluamos en los puntos fijos
+\begin{equation*}
+    f'(N=0) = -r < 0; \quad  f'(N=A)=r\left[1-\frac{A}{K}\right] > 0; \quad f'(N=K)=r\left[1-\frac{K}{A}\right] < 0. 
+\end{equation*}
+donde supusimos que $A<K$ y llegamos a que $0$ y $K$ son puntos fijos estables y $A$ es un punto fijo inestable. En la Fig. \ref*{fig:ej6} se muestra la solución del sistema para distintos valores de la condición inicial $n_0$. Se observa que para $n_0>A$ la población converge al valor de acarreo $K$ y para $n_0<A$ la población se extingue.
 
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.6\textwidth]{ej6.png}
+    \caption{Evolución del sistema para distintos valores de la condición inicial $n_0$. Se observa que para $n_0>A$ la población converge al valor de acarreo $K$ y para $n_0<A$ la población se extingue.}
+    \label{fig:ej6}
+\end{figure}
 
-
-
-
-
-
-
+En primer lugar, la diferencia con el modelo logístico es la cantidad de puntos de equilibrio. En el modelo de Alle tenemos un punto de equilibrio más. Además, en el modelo de Alle el punto fijo $n=0$ es estable mientras que en la ecuación logística el punto fijo $n=0$ es inestable (para $r>0$). Esto indica que introducir un umbral $A$ al modelo, fuerza al sistema a tener un número mínimo de individuos para que la población sobreviva, ya que de lo contrario se extingue. 
 
 %\bibliographystyle{plain} % Estilo de bibliografía
 %\bibliography{bibliography}    % Nombre de tu archivo .bib sin la extensión
